2013-07-xx Santiago Ramos <sramos@sitiodistinto.net> Version 0.7.0.01

  * Migracion a Rails3
  * En la copia de factura, coge los productos de todos los albaranes
  * Bug en el borrado de pagos (falta de id html)
  * Cambios en las busquedas en internet

2012-11-07 Santiago Ramos <sramos@sitiodistinto.net> Version 0.6.9.10

  * Bug al copiar albaran desde factura (proveedores)

2012-08-07 Santiago Ramos <sramos@sitiodistinto.net> Version 0.6.9.9

  * Problema al editar una nueva factura de servicio
  * Gestion de materias
  * Modificada longitud del campo de comentarios de producto
  * Edicion de descripcion de producto via ajax
  * Obtencion de imagen y descripcion desde gbooks y tdt

2012-07-01 Santiago Ramos <sramos@sitiodistinto.net> Version 0.6.9.8

  * Corregido copyright
  * Problema con el orden de los migrates
  * Repuesto mensaje de cobro

2012-04-06 Santiago Ramos <sramos@sitiodistinto.net> Version 0.6.9.7

  * Los albaranes de proveedores no pasan directamente a facturas
  * Gestión de albaranes de proveedores cerrados
  * Generación del número de factura para ventas
  * Filtros de facturas de proveedores por fecha de vencimiento
  * En los sublistados de albaranes muestra su estado (abierto, cerrado, deposito)
  * Código ISBN mostrado en los sublistados de productos
  * Vinculacion de N albaranes a 1 factura (en modelo de datos)

2012-04-06 Santiago Ramos <sramos@sitiodistinto.net> Version 0.6.9.6

  * Bug en pagos de facturas
  * Forzada anchura en selectores

2012-01-20 Santiago Ramos <sramos@sitiodistinto.net> Version 0.6.9.5

  * Bug en informes
  * Bug en dimensiones de imagenes
  * Cambios en mensajes de informacion
  * Incluida paginacion para proveedores y clientes
  * Incluida vista xls para proveedores y clientes
  * Evita aviso de pago si la factura tiene importe = 0
  * Validaciones de datos en pagos
  * Permitir pagos negativos (para devoluciones)
  * Fija la posicion del plugin de calendario