@@ -7,8 +7,8 @@
   <div id="autor_<%= i += 1 %>" class="listadofila">
     <%= fila_listado objeto %>
     <div class="listado_derecha">
-      <%= modal icono("Write",{:title => "Editar"}), { :action => 'editar', :id => objeto.id }, "Editar Editorial" %>
-      <%= borrado icono('Trash',{:title => "Borrar"}), {:action => :borrar, :id => objeto}, 'Eliminar Editorial', "Editorial: " + objeto.nombre, :ajax => false %>
+      <%= modal icono("Write",{:title => "Editar"}), { action: :editar, id: objeto.id, page: params[:page] }, 'Editar Autor' %>
+      <%= borrado icono('Trash',{:title => "Borrar"}), { action: :borrar, id: objeto, page: params[:page] }, 'Eliminar Autor', 'Autor: ' + objeto.nombre, ajax: false %>
     </div>
   <div class='linea'></div>
   <div id="spinner_<%= objeto.id.to_s %>" class="spinner" style="display:none" ></div>
