@@ -3,3 +3,7 @@
 
 en:
   hello: "Hello world"
+  will_paginate:
+    previous_label: "&#8592; Previous"
+    next_label: "Next &#8594;"
+    page_gap: "&hellip;"
