@@ -187,3 +187,12 @@ es:
       words_connector: ", "
       two_words_connector: " y "
       last_word_connector: " y "
+
+  # Used in will_paginate
+  will_paginate:
+    #previous_label: "&#8592; Anterior"
+    #next_label: "Siguiente &#8594;"
+    previous_label: "<< Anterior"
+    next_label: "Siguiente >>"
+    page_gap: "&hellip;"
+
