@@ -4,6 +4,8 @@
   * En la copia de factura, coge los productos de todos los albaranes
   * Bug en el borrado de pagos (falta de id html)
   * Cambios en las busquedas en internet
+  * Separacion de entidades editorial y autor
+  * Ayudas a la resolucion de nombres de autores duplicados
 
 2012-11-07 Santiago Ramos <sramos@sitiodistinto.net> Version 0.6.9.10
 
